1.took out the data in APP 2.create Dialog.tsx and map 2.create Message.tsx and map 3.create ProfileInfo.tsx and map

--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -1,12 +1,14 @@
 .nav {
     background-color:darksalmon;
     grid-area: n;
+    padding: 20px;
 }
 
-.item {
+.item a{
     color:white;
+    text-decoration: none;
 }
 
-.item.atcive {
+.item a.atcive {
   color:yellow;
 }
