--- a/src/components/dialogs/Dialogs.module.css
+++ b/src/components/dialogs/Dialogs.module.css
@@ -1,9 +1,35 @@
-.header {
-
-    background-color:bisque ;
-    grid-area: h;
+.dialogs {
+  display: grid;
+    grid-template-columns: 2fr 10fr;
+    color:white;
 }
 
-header img {
-    width:20px;
+
+
+.dialogsItems {
+  padding: 20px;
+    color:white;
+    text-decoration: none;
+}
+
+.dialogsItems .active {
+    color:gold;
+}
+.dialogsItems .visited {
+    color:white;
+    text-decoration: none;
+}
+
+.dialog {
+    color:white;
+    text-decoration: none;
+}
+
+.messages {
+    padding: 20px;
+    color:white;
+}
+
+.message {
+
 }
